-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.6.0, 4.6.1, 4.6.2, 4.6.3, 5.9.0 Beta 2
-
None
-
Both Linux and Windows versions
-
445191bba8216276e6200157906ca9d138d7be04
Torn-off menus do not set their window title propertly (shown application execuable name instead of menu title).
This bug is due to following line in "src/gui/widgets/qmenu.cpp" in constructor of class "QTornOffMenu(QMenu *p)":
setWindowTitle(p->windowTitle()); /// line no 119 in version 4.6.2
This assumes that menu's have a property "window title", but such property is usually not set (especially while creating forms from QtDesigner).
Obviously this line in "qmenu.cpp" should be:
setWindowTitle(p->title().remove("&"));
For Gerrit Dashboard: QTBUG-11693 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
192746,4 | QMenu: Display the menu title on the torn-off menu's title bar | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |